{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 8,
  "lineage": "b48ecc53-a04a-55d5-8256-b03da4b17f34",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-083eb03ee8ae87bb1",
            "arn": "arn:aws:ec2:us-east-1:750819667599:instance/i-0bf186c394ac6def3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bf186c394ac6def3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-007b9360af8f2fc61"
              }
            ],
            "primary_network_interface_id": "eni-007b9360af8f2fc61",
            "private_dns": "ip-10-0-1-78.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.78",
            "public_dns": "ec2-54-157-200-175.compute-1.amazonaws.com",
            "public_ip": "54.157.200.175",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cd0640df43430eec",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d8574b619f9f389d",
            "tags": {
              "Name": "demo-ec2"
            },
            "tags_all": {
              "Name": "demo-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f632a0cfcedf0ce3"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "i-0bf186c394ac6def3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ec2",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750819667599:internet-gateway/igw-01dbb973d5ed47896",
            "id": "igw-01dbb973d5ed47896",
            "owner_id": "750819667599",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-igw"
            },
            "tags_all": {
              "Name": "demo-igw"
            },
            "vpc_id": "vpc-0c4fcde963aaa2f86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "igw-01dbb973d5ed47896",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750819667599:route-table/rtb-0867458319f3c8d1c",
            "id": "rtb-0867458319f3c8d1c",
            "owner_id": "750819667599",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01dbb973d5ed47896",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo-public-rt"
            },
            "tags_all": {
              "Name": "demo-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4fcde963aaa2f86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "rtb-0867458319f3c8d1c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0021282609fc193e1",
            "region": "us-east-1",
            "route_table_id": "rtb-0867458319f3c8d1c",
            "subnet_id": "subnet-0d8574b619f9f389d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "rtbassoc-0021282609fc193e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750819667599:security-group/sg-0f632a0cfcedf0ce3",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f632a0cfcedf0ce3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "demo-ec2-sg",
            "name_prefix": "",
            "owner_id": "750819667599",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-ec2-sg"
            },
            "tags_all": {
              "Name": "demo-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c4fcde963aaa2f86"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "sg-0f632a0cfcedf0ce3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750819667599:subnet/subnet-0d8574b619f9f389d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8574b619f9f389d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750819667599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-public-subnet"
            },
            "tags_all": {
              "Name": "demo-public-subnet"
            },
            "vpc_id": "vpc-0c4fcde963aaa2f86"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "subnet-0d8574b619f9f389d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750819667599:vpc/vpc-0c4fcde963aaa2f86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0658036edeb5fd7f9",
            "default_route_table_id": "rtb-05e6c344d64449595",
            "default_security_group_id": "sg-0ad1dcdc304455a75",
            "dhcp_options_id": "dopt-073b35b36d68bae59",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c4fcde963aaa2f86",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05e6c344d64449595",
            "owner_id": "750819667599",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750819667599",
            "id": "vpc-0c4fcde963aaa2f86",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}